<resources>
    <string name="app_name">ShuttlrDemo</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_request_ride">RequestRideActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="formatted_place_data">
        Name: %1$s\nAddress: %2$s\nPhone: %3$s\nWebsite: %4$s\n
    </string>
    <string name="string_request_ride_single_trip">Single Trip</string>
    <string name="string_request_ride_recurring">Recurring</string>
    <string name="string_request_ride_pickup">Pickup</string>
    <string name="dropoff_image">Dropoff Image</string>
    <string name="request_ride_header_text">Please confirm your request details</string>
    <string name="go_back_text">Go back</string>
    <string name="book_trip_button_text">Book Trip</string>
    <string name="copyright_text">© Shuttlr Canada</string>
    <string name="legal_page_main_text">Don\'t cheat\n  Don\'t plagarize\n  Don\'t be an asshole</string>
    <string name="activity_bar_name">Shuttlr Demo</string>
    <string name="main_button_top">Request a Ride</string>
    <string name="main_button_bottom">Check Ride Status</string>
    <string name="shuttlrs_near_me">Shuttles Near me</string>
    <string name="ride_requested">Sit tight  Your ride is on its way!</string>
    <string name="track_ride">Track My Ride</string>
    <string name="new_user_title">New User Registration</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login</string>
    <string name="settings">Settings</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="bug_description">Please include a description of the bug</string>
    <string name="send">Send</string>
    <string name="bug_report">ShuttlrDemo bug report</string>
    <string name="recent_trips">Recent Trips</string>
    <string name="list_recent_trips">List of recent trips</string>
    <string name="add_payment">Add a Payment</string>
    <string name="maps_description">Activity bar maps link</string>
    <string name="e_mail">E-mail</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="create_new_account">No account yet? Create one</string>
    <string name="legal">Legal</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="home_address">Home Address</string>
    <string name="company">Company</string>
    <string name="save">Save</string>
    <string name="car_image_description">Automated car image</string>
    <string name="location_marker_description">Location marker image</string>
    <string name="close_image_description">Close image</string>
    <string name="down_arrow_description">Down arrow</string>
    <string name="company_logo_description">Company logo</string>
    <string name="credit_card_description">Image of credit card</string>
    <string-array name="company_list">
        <item>Select</item>
        <item>Arcelor Mittal Dofasco</item>
        <item>City of Hamilton</item>
        <item>Hamilton Health Sciences</item>
        <item>McMaster University</item>
        <item>Other</item>
    </string-array>

</resources>
